# triangle

./: CMakeLists.txt  Makefile
cmake/: FindSDL2_image.cmake
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  main.cpp
